--- a/machine 1 testing.Rmd
+++ b/machine 1 testing.Rmd
@@ -32,3 +32,5 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 after renaming
 
 after reloading project
+
+loading to a second machine
